--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -5,6 +5,7 @@ resources:
 - bases/delivery.krok.app_repositories.yaml
 - bases/delivery.krok.app_commands.yaml
 - bases/delivery.krok.app_commandruns.yaml
+- bases/delivery.krok.app_events.yaml
 #+kubebuilder:scaffold:crdkustomizeresource
 
 patchesStrategicMerge:
@@ -13,6 +14,7 @@ patchesStrategicMerge:
 #- patches/webhook_in_repositories.yaml
 #- patches/webhook_in_commands.yaml
 #- patches/webhook_in_commandruns.yaml
+#- patches/webhook_in_events.yaml
 #+kubebuilder:scaffold:crdkustomizewebhookpatch
 
 # [CERTMANAGER] To enable cert-manager, uncomment all the sections with [CERTMANAGER] prefix.
@@ -20,6 +22,7 @@ patchesStrategicMerge:
 #- patches/cainjection_in_repositories.yaml
 #- patches/cainjection_in_commands.yaml
 #- patches/cainjection_in_commandruns.yaml
+#- patches/cainjection_in_events.yaml
 #+kubebuilder:scaffold:crdkustomizecainjectionpatch
 
 # the following config is for teaching kustomize how to do kustomization for CRDs.
