--- a/config/crd/bases/delivery.krok.app_platforms.yaml
+++ b/config/crd/bases/delivery.krok.app_platforms.yaml
@@ -5,20 +5,20 @@ metadata:
   annotations:
     controller-gen.kubebuilder.io/version: v0.9.2
   creationTimestamp: null
-  name: commandruns.delivery.krok.app
+  name: platforms.delivery.krok.app
 spec:
   group: delivery.krok.app
   names:
-    kind: CommandRun
-    listKind: CommandRunList
-    plural: commandruns
-    singular: commandrun
+    kind: Platform
+    listKind: PlatformList
+    plural: platforms
+    singular: platform
   scope: Namespaced
   versions:
   - name: v1alpha1
     schema:
       openAPIV3Schema:
-        description: CommandRun is the Schema for the commandruns API
+        description: Platform is the Schema for the platforms API
         properties:
           apiVersion:
             description: 'APIVersion defines the versioned schema of this representation
@@ -33,41 +33,23 @@ spec:
           metadata:
             type: object
           spec:
-            description: CommandRunSpec defines the desired state of CommandRun
+            description: PlatformSpec defines the desired state of Platform
             properties:
-              commandName:
-                description: CommandName is the name of the command that is being
-                  executed.
+              id:
+                description: ID identifies the platform. This is a given.
+                type: integer
+              name:
+                description: Name gives a human-readable name to a platform.
+                enum:
+                - github
+                - gitlab
                 type: string
-              eventRef:
-                description: EventRef is the ref of the event that this run belongs
-                  to.
-                properties:
-                  name:
-                    type: string
-                  namespace:
-                    type: string
-                required:
-                - name
-                - namespace
-                type: object
             required:
-            - commandName
-            - eventRef
+            - id
+            - name
             type: object
           status:
-            description: CommandRunStatus defines the observed state of CommandRun
-            properties:
-              outcome:
-                description: Outcome is any output of the command. Stdout and stderr
-                  combined.
-                type: string
-              status:
-                description: 'Status is the current state of the command run. example:
-                  created, running, failed, success'
-                type: string
-            required:
-            - status
+            description: PlatformStatus defines the observed state of Platform
             type: object
         type: object
     served: true
