--- a/config/crd/bases/delivery.krok.app_repositories.yaml
+++ b/config/crd/bases/delivery.krok.app_repositories.yaml
@@ -67,14 +67,7 @@ spec:
                           type: string
                         metadata:
                           type: object
-                        spec:
-                          description: CommandSpec defines the desired state of Command
-                          properties:
-                            foo:
-                              description: Foo is an example field of Command. Edit
-                                command_types.go to remove/update
-                              type: string
-                          type: object
+                        spec: {}
                         status:
                           description: CommandStatus defines the observed state of
                             Command
@@ -164,12 +157,101 @@ spec:
               events:
                 description: Events contains all events that are being executed or
                   were executed for this repository.
-                items:
-                  type: string
-                type: array
+                properties:
+                  apiVersion:
+                    description: 'APIVersion defines the versioned schema of this
+                      representation of an object. Servers should convert recognized
+                      schemas to the latest internal value, and may reject unrecognized
+                      values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
+                    type: string
+                  items:
+                    items:
+                      description: Event is the Schema for the events API
+                      properties:
+                        apiVersion:
+                          description: 'APIVersion defines the versioned schema of
+                            this representation of an object. Servers should convert
+                            recognized schemas to the latest internal value, and may
+                            reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
+                          type: string
+                        kind:
+                          description: 'Kind is a string value representing the REST
+                            resource this object represents. Servers may infer this
+                            from the endpoint the client submits requests to. Cannot
+                            be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
+                          type: string
+                        metadata:
+                          type: object
+                        spec:
+                          description: EventSpec defines the desired state of Event
+                          properties:
+                            foo:
+                              description: Foo is an example field of Event. Edit
+                                event_types.go to remove/update
+                              type: string
+                          type: object
+                        status:
+                          description: EventStatus defines the observed state of Event
+                          type: object
+                      type: object
+                    type: array
+                  kind:
+                    description: 'Kind is a string value representing the REST resource
+                      this object represents. Servers may infer this from the endpoint
+                      the client submits requests to. Cannot be updated. In CamelCase.
+                      More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
+                    type: string
+                  metadata:
+                    description: ListMeta describes metadata that synthetic resources
+                      must have, including lists and various status objects. A resource
+                      may have only one of {ObjectMeta, ListMeta}.
+                    properties:
+                      continue:
+                        description: continue may be set if the user set a limit on
+                          the number of items returned, and indicates that the server
+                          has more data available. The value is opaque and may be
+                          used to issue another request to the endpoint that served
+                          this list to retrieve the next set of available objects.
+                          Continuing a consistent list may not be possible if the
+                          server configuration has changed or more than a few minutes
+                          have passed. The resourceVersion field returned when using
+                          this continue value will be identical to the value in the
+                          first response, unless you have received this token from
+                          an error message.
+                        type: string
+                      remainingItemCount:
+                        description: remainingItemCount is the number of subsequent
+                          items in the list which are not included in this list response.
+                          If the list request contained label or field selectors,
+                          then the number of remaining items is unknown and the field
+                          will be left unset and omitted during serialization. If
+                          the list is complete (either because it is not chunking
+                          or because this is the last chunk), then there are no more
+                          remaining items and this field will be left unset and omitted
+                          during serialization. Servers older than v1.15 do not set
+                          this field. The intended use of the remainingItemCount is
+                          *estimating* the size of a collection. Clients should not
+                          rely on the remainingItemCount to be set or to be exact.
+                        format: int64
+                        type: integer
+                      resourceVersion:
+                        description: 'String that identifies the server''s internal
+                          version of this object that can be used by clients to determine
+                          when objects have changed. Value must be treated as opaque
+                          by clients and passed unmodified back to the server. Populated
+                          by the system. Read-only. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#concurrency-control-and-consistency'
+                        type: string
+                      selfLink:
+                        description: 'Deprecated: selfLink is a legacy read-only field
+                          that is no longer populated by the system.'
+                        type: string
+                    type: object
+                required:
+                - items
+                type: object
               unique_url:
-                description: 'A Unique URL for this given repository. Generated upon
-                  creation and saved in Status field. required: true'
+                description: A Unique URL for this given repository. Generated upon
+                  creation and saved in Status field.
                 type: string
             type: object
         type: object
