--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -2,30 +2,30 @@
 # since it depends on service name and namespace that are out of this kustomize package.
 # It should be run by config/default
 resources:
-- bases/delivery.krok.app_repositories.yaml
-- bases/delivery.krok.app_commands.yaml
-- bases/delivery.krok.app_commandruns.yaml
-- bases/delivery.krok.app_events.yaml
-- bases/delivery.krok.app_platforms.yaml
+- bases/delivery.krok.app_krokrepositories.yaml
+- bases/delivery.krok.app_krokcommands.yaml
+- bases/delivery.krok.app_krokplatforms.yaml
+- bases/delivery.krok.app_krokcommandruns.yaml
+- bases/delivery.krok.app_krokevents.yaml
 #+kubebuilder:scaffold:crdkustomizeresource
 
 patchesStrategicMerge:
 # [WEBHOOK] To enable webhook, uncomment all the sections with [WEBHOOK] prefix.
 # patches here are for enabling the conversion webhook for each CRD
-#- patches/webhook_in_repositories.yaml
-#- patches/webhook_in_commands.yaml
-#- patches/webhook_in_commandruns.yaml
-#- patches/webhook_in_events.yaml
-#- patches/webhook_in_platforms.yaml
+#- patches/webhook_in_krokrepositories.yaml
+#- patches/webhook_in_krokcommands.yaml
+#- patches/webhook_in_krokplatforms.yaml
+#- patches/webhook_in_krokcommandruns.yaml
+#- patches/webhook_in_krokevents.yaml
 #+kubebuilder:scaffold:crdkustomizewebhookpatch
 
 # [CERTMANAGER] To enable cert-manager, uncomment all the sections with [CERTMANAGER] prefix.
 # patches here are for enabling the CA injection for each CRD
-#- patches/cainjection_in_repositories.yaml
-#- patches/cainjection_in_commands.yaml
-#- patches/cainjection_in_commandruns.yaml
-#- patches/cainjection_in_events.yaml
-#- patches/cainjection_in_platforms.yaml
+#- patches/cainjection_in_krokrepositories.yaml
+#- patches/cainjection_in_krokcommands.yaml
+#- patches/cainjection_in_krokplatforms.yaml
+#- patches/cainjection_in_krokcommandruns.yaml
+#- patches/cainjection_in_krokevents.yaml
 #+kubebuilder:scaffold:crdkustomizecainjectionpatch
 
 # the following config is for teaching kustomize how to do kustomization for CRDs.
