--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -8,7 +8,7 @@ rules:
 - apiGroups:
   - delivery.krok.app
   resources:
-  - commands
+  - krokcommands
   verbs:
   - create
   - delete
@@ -20,13 +20,13 @@ rules:
 - apiGroups:
   - delivery.krok.app
   resources:
-  - commands/finalizers
+  - krokcommands/finalizers
   verbs:
   - update
 - apiGroups:
   - delivery.krok.app
   resources:
-  - commands/status
+  - krokcommands/status
   verbs:
   - get
   - patch
@@ -34,7 +34,7 @@ rules:
 - apiGroups:
   - delivery.krok.app
   resources:
-  - repositories
+  - krokrepositories
   verbs:
   - create
   - delete
@@ -46,13 +46,13 @@ rules:
 - apiGroups:
   - delivery.krok.app
   resources:
-  - repositories/finalizers
+  - krokrepositories/finalizers
   verbs:
   - update
 - apiGroups:
   - delivery.krok.app
   resources:
-  - repositories/status
+  - krokrepositories/status
   verbs:
   - get
   - patch
