--- a/config/crd/bases/delivery.krok.app_krokrepositories.yaml
+++ b/config/crd/bases/delivery.krok.app_krokrepositories.yaml
@@ -165,6 +165,12 @@ spec:
                 required:
                 - items
                 type: object
+              events:
+                description: Events contains all events that this repository subscribes
+                  to.
+                items:
+                  type: string
+                type: array
               gitLab:
                 description: GitLab specific settings.
                 properties:
@@ -202,103 +208,6 @@ spec:
           status:
             description: KrokRepositoryStatus defines the observed state of KrokRepository
             properties:
-              events:
-                description: Events contains all events that are being executed or
-                  were executed for this repository.
-                properties:
-                  apiVersion:
-                    description: 'APIVersion defines the versioned schema of this
-                      representation of an object. Servers should convert recognized
-                      schemas to the latest internal value, and may reject unrecognized
-                      values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
-                    type: string
-                  items:
-                    items:
-                      description: KrokEvent is the Schema for the krokevents API
-                      properties:
-                        apiVersion:
-                          description: 'APIVersion defines the versioned schema of
-                            this representation of an object. Servers should convert
-                            recognized schemas to the latest internal value, and may
-                            reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
-                          type: string
-                        kind:
-                          description: 'Kind is a string value representing the REST
-                            resource this object represents. Servers may infer this
-                            from the endpoint the client submits requests to. Cannot
-                            be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
-                          type: string
-                        metadata:
-                          type: object
-                        spec:
-                          description: KrokEventSpec defines the desired state of
-                            KrokEvent
-                          properties:
-                            foo:
-                              description: Foo is an example field of KrokEvent. Edit
-                                krokevent_types.go to remove/update
-                              type: string
-                          type: object
-                        status:
-                          description: KrokEventStatus defines the observed state
-                            of KrokEvent
-                          type: object
-                      type: object
-                    type: array
-                  kind:
-                    description: 'Kind is a string value representing the REST resource
-                      this object represents. Servers may infer this from the endpoint
-                      the client submits requests to. Cannot be updated. In CamelCase.
-                      More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
-                    type: string
-                  metadata:
-                    description: ListMeta describes metadata that synthetic resources
-                      must have, including lists and various status objects. A resource
-                      may have only one of {ObjectMeta, ListMeta}.
-                    properties:
-                      continue:
-                        description: continue may be set if the user set a limit on
-                          the number of items returned, and indicates that the server
-                          has more data available. The value is opaque and may be
-                          used to issue another request to the endpoint that served
-                          this list to retrieve the next set of available objects.
-                          Continuing a consistent list may not be possible if the
-                          server configuration has changed or more than a few minutes
-                          have passed. The resourceVersion field returned when using
-                          this continue value will be identical to the value in the
-                          first response, unless you have received this token from
-                          an error message.
-                        type: string
-                      remainingItemCount:
-                        description: remainingItemCount is the number of subsequent
-                          items in the list which are not included in this list response.
-                          If the list request contained label or field selectors,
-                          then the number of remaining items is unknown and the field
-                          will be left unset and omitted during serialization. If
-                          the list is complete (either because it is not chunking
-                          or because this is the last chunk), then there are no more
-                          remaining items and this field will be left unset and omitted
-                          during serialization. Servers older than v1.15 do not set
-                          this field. The intended use of the remainingItemCount is
-                          *estimating* the size of a collection. Clients should not
-                          rely on the remainingItemCount to be set or to be exact.
-                        format: int64
-                        type: integer
-                      resourceVersion:
-                        description: 'String that identifies the server''s internal
-                          version of this object that can be used by clients to determine
-                          when objects have changed. Value must be treated as opaque
-                          by clients and passed unmodified back to the server. Populated
-                          by the system. Read-only. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#concurrency-control-and-consistency'
-                        type: string
-                      selfLink:
-                        description: 'Deprecated: selfLink is a legacy read-only field
-                          that is no longer populated by the system.'
-                        type: string
-                    type: object
-                required:
-                - items
-                type: object
               uniqueURL:
                 description: A Unique URL for this given repository. Generated upon
                   creation and saved in Status field.
