--- a/config/samples/repository_secret_sample.yaml
+++ b/config/samples/repository_secret_sample.yaml
@@ -4,7 +4,7 @@ type: Opaque
 metadata:
   name: repository-sample-secret
 data:
-  token: YWRtaW4=
+  secret: YWRtaW4=
   username: MWYyZDFlMmU2N2Rm
   password: MWYyZDFlMmU2N2Rm
   sshKey: MWYyZDFlMmU2N2Rm
