--- a/config/samples/repository_secret_sample.yaml
+++ b/config/samples/repository_secret_sample.yaml
@@ -3,8 +3,6 @@ kind: Secret
 type: Opaque
 metadata:
   name: repository-sample-secret
+  namespace: krok-system
 data:
-  secret: YWRtaW4=
-  username: MWYyZDFlMmU2N2Rm
-  password: MWYyZDFlMmU2N2Rm
-  sshKey: MWYyZDFlMmU2N2Rm
+  secret: c2VjcmV0
