--- a/config/samples/delivery_v1alpha1_krokcommandrun.yaml
+++ b/config/samples/delivery_v1alpha1_krokcommandrun.yaml
@@ -8,5 +8,6 @@ metadata:
     app.kuberentes.io/managed-by: kustomize
     app.kubernetes.io/created-by: operator
   name: krokcommandrun-sample
+  namespace: krok-system
 spec:
   # TODO(user): Add fields here
