--- a/config/crd/bases/delivery.krok.app_krokrepositories.yaml
+++ b/config/crd/bases/delivery.krok.app_krokrepositories.yaml
@@ -88,9 +88,6 @@ spec:
                               description: 'Image defines the image name and tag of
                                 the command example: krok-hook/slack-notification:v0.0.1'
                               type: string
-                            name:
-                              description: Name of the command.
-                              type: string
                             platforms:
                               description: Platforms holds all the platforms which
                                 this command supports.
@@ -103,7 +100,6 @@ spec:
                               type: string
                           required:
                           - image
-                          - name
                           type: object
                         status:
                           description: KrokCommandStatus defines the observed state
@@ -220,7 +216,7 @@ spec:
                     type: string
                   items:
                     items:
-                      description: KrokCommandRun is the Schema for the krokcommandruns
+                      description: KrokCommandRun is the Schema for the KrokCommandRuns
                         API
                       properties:
                         apiVersion:
