--- a/config/samples/delivery_v1alpha1_krokrepository.yaml
+++ b/config/samples/delivery_v1alpha1_krokrepository.yaml
@@ -14,3 +14,6 @@ spec:
   url: "https://github.com/Skarlso/test"
   events:
     - push
+  commands:
+    - namespace: krok-system
+      name: slack-command
