Added reconciling GitRepositories

--- a/config/crd/bases/delivery.krok.app_krokrepositories.yaml
+++ b/config/crd/bases/delivery.krok.app_krokrepositories.yaml
@@ -149,6 +149,10 @@ spec:
                               - name
                               - namespace
                               type: object
+                            commitRef:
+                              description: CommitRef is the ref of the commit which
+                                triggered the event.
+                              type: string
                             payload:
                               description: Payload is the received event payload from
                                 the provider.
@@ -159,6 +163,7 @@ spec:
                               type: string
                           required:
                           - commandRun
+                          - commitRef
                           - payload
                           - type
                           type: object
