--- a/config/crd/bases/delivery.krok.app_krokevents.yaml
+++ b/config/crd/bases/delivery.krok.app_krokevents.yaml
@@ -46,6 +46,10 @@ spec:
                 - name
                 - namespace
                 type: object
+              commitRef:
+                description: CommitRef is the ref of the commit which triggered the
+                  event.
+                type: string
               payload:
                 description: Payload is the received event payload from the provider.
                 type: string
@@ -54,6 +58,7 @@ spec:
                 type: string
             required:
             - commandRun
+            - commitRef
             - payload
             - type
             type: object
