--- a/config/service/source-controller-service.yaml
+++ b/config/service/source-controller-service.yaml
@@ -1,13 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: source-controller
+  name: krok-source-controller
 spec:
   type: ClusterIP
   selector:
-    app: source-controller
+    app: krok-controller
   ports:
     - name: http
       port: 80
       protocol: TCP
-      targetPort: 9999
+      targetPort: source-server
