--- a/config/deployment/deployment.yaml
+++ b/config/deployment/deployment.yaml
@@ -23,18 +23,14 @@ spec:
       containers:
         - args:
             - --hook-base-address={YOUR_IP}:9998
-            - --source-controller-address=krok-source-controller.$(RUNTIME_NAMESPACE).svc.cluster.local.
+            - --source-controller-artifact-base=krok-source-controller.$(RUNTIME_NAMESPACE).svc.cluster.local.
           env:
             - name: RUNTIME_NAMESPACE
               valueFrom:
                 fieldRef:
                   fieldPath: metadata.namespace
-          image: ghcr.io/krok-o/krok-controller:v0.0.1
-          imagePullPolicy: IfNotPresent
-          livenessProbe:
-            httpGet:
-              path: /healthz
-              port: healthz
+          image: localhost:5000/krok-o/krok-controller:v0.0.1
+          imagePullPolicy: Always
           name: manager
           ports:
             - containerPort: 9998
@@ -43,13 +39,18 @@ spec:
             - containerPort: 9999
               name: source-server
               protocol: TCP
-            - containerPort: 8081
-              name: healthz
-              protocol: TCP
+          livenessProbe:
+            httpGet:
+              path: /healthz
+              port: 8081
+            initialDelaySeconds: 15
+            periodSeconds: 20
           readinessProbe:
             httpGet:
-              path: /
-              port: http
+              path: /readyz
+              port: 8081
+            initialDelaySeconds: 5
+            periodSeconds: 10
           resources:
             limits:
               cpu: 1000m
@@ -73,6 +74,7 @@ spec:
               name: tmp
       securityContext:
         fsGroup: 1337
+      serviceAccountName: controller-manager
       terminationGracePeriodSeconds: 10
       volumes:
         - emptyDir: {}
