--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -6,6 +6,14 @@ metadata:
   name: manager-role
 rules:
 - apiGroups:
+    - ""
+  resources:
+    - secrets
+  verbs:
+    - list
+    - get
+    - watch
+- apiGroups:
   - delivery.krok.app
   resources:
   - jobs/finalizers
