--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -14,6 +14,15 @@ rules:
     - get
     - watch
 - apiGroups:
+    - "batch"
+  resources:
+    - jobs
+  verbs:
+    - list
+    - get
+    - watch
+    - create
+- apiGroups:
   - delivery.krok.app
   resources:
   - jobs/finalizers
