Working on the job reconciler

--- a/config/crd/bases/delivery.krok.app_krokrepositories.yaml
+++ b/config/crd/bases/delivery.krok.app_krokrepositories.yaml
@@ -177,6 +177,12 @@ spec:
                               description: Outcome holds the outcome of the event
                                 such as success, failed...
                               type: string
+                            output:
+                              additionalProperties:
+                                type: string
+                              description: Output contains each job's output in a
+                                map.
+                              type: object
                           type: object
                       type: object
                     type: array
