Added pods controller and log gathering into secret

--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -6,11 +6,65 @@ metadata:
   name: manager-role
 rules:
 - apiGroups:
-  - delivery.krok.app
+  - ""
+  resources:
+  - pods
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
+  - ""
+  resources:
+  - pods/log
+  verbs:
+  - get
+- apiGroups:
+  - ""
+  resources:
+  - secrets
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
+  - batch
+  resources:
+  - jobs
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
+  - batch
   resources:
   - jobs/finalizers
   verbs:
   - update
+- apiGroups:
+  - delivery.krok.app
+  resources:
+  - krokcommands
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
 - apiGroups:
   - delivery.krok.app
   resources:
