--- a/config/crd/bases/delivery.krok.app_krokrepositories.yaml
+++ b/config/crd/bases/delivery.krok.app_krokrepositories.yaml
@@ -136,29 +136,14 @@ spec:
                           description: KrokEventSpec defines the desired state of
                             KrokEvent
                           properties:
-                            CommandsToRun:
+                            commandsToRun:
                               description: CommandsToRun contains a list of commands
                                 that this event needs to execute.
                               items:
-                                description: KrokCommand is the Schema for the krokcommands
-                                  API
+                                description: CommandTemplate contains command specifications.
                                 properties:
-                                  apiVersion:
-                                    description: 'APIVersion defines the versioned
-                                      schema of this representation of an object.
-                                      Servers should convert recognized schemas to
-                                      the latest internal value, and may reject unrecognized
-                                      values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
+                                  name:
                                     type: string
-                                  kind:
-                                    description: 'Kind is a string value representing
-                                      the REST resource this object represents. Servers
-                                      may infer this from the endpoint the client
-                                      submits requests to. Cannot be updated. In CamelCase.
-                                      More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
-                                    type: string
-                                  metadata:
-                                    type: object
                                   spec:
                                     description: KrokCommandSpec defines the desired
                                       state of KrokCommand
@@ -214,10 +199,9 @@ spec:
                                     required:
                                     - image
                                     type: object
-                                  status:
-                                    description: KrokCommandStatus defines the observed
-                                      state of KrokCommand
-                                    type: object
+                                required:
+                                - name
+                                - spec
                                 type: object
                               type: array
                             payload:
@@ -229,7 +213,7 @@ spec:
                                 pull, ping...'
                               type: string
                           required:
-                          - CommandsToRun
+                          - commandsToRun
                           - payload
                           - type
                           type: object
