--- a/config/rbac/role_binding.yaml
+++ b/config/rbac/role_binding.yaml
@@ -8,12 +8,12 @@ metadata:
     app.kubernetes.io/created-by: operator
     app.kubernetes.io/part-of: operator
     app.kubernetes.io/managed-by: kustomize
-  name: manager-rolebinding
+  name: krok-controller-rolebinding
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: manager-role
+  name: krok-controller-role
 subjects:
 - kind: ServiceAccount
-  name: controller-manager
-  namespace: krok-system
+  name: krok-controller
+  namespace: system
