--- a/config/manager/kustomization.yaml
+++ b/config/manager/kustomization.yaml
@@ -3,11 +3,8 @@ kind: Kustomization
 resources:
 - manager.yaml
 images:
-- name: controller
-  newName: controller
-  newTag: latest
 - name: krok-o/krok-controller
-  newName: localhost:5001/krok-o/krok-controller
+  newName: ghcr.io/krok-o/krok-controller
   newTag: v0.0.1
 patchesStrategicMerge:
 - environment_values_patch.yaml
